[FOLLOWUP][BUGFIX] Remove space between buttons in button-group
Prevent overlapping of buttons in irre-header.

Releases: master
Resolves: #65110
Reviewed-on: http://review.typo3.org/37054
Tested-by: Tymoteusz Motylewski <t.motylewski@gmail.com>
Tested-by: Michael Oehlhof <typo3@oehlhof.de>
Tested-by: Wouter Wolters <typo3@wouterwolters.nl>

--- a/typo3/sysext/t3skin/Resources/Private/Styles/TYPO3/_main_form.less
+++ b/typo3/sysext/t3skin/Resources/Private/Styles/TYPO3/_main_form.less
@@ -236,9 +236,6 @@ select {
 	cursor: auto;
 	.btn-group > .btn {
 		float: none;
-		+ .btn {
-			margin-left: -5px;
-		}
 	}
 }
 
